bdr.BDR.scala.error
Erreur de compilation :
BDR:6: error: ';' expected but 'else' found.
  } else if (litMessage()=="L"){
    ^